crates/ars-collections/tests/ui/tab_key_partial_variant_keys.rs
use ars_collections::TabKey;

#[derive(TabKey)]
enum SettingsTab {
    #[tab_key(str = "profile")]
    Profile,
    Billing,
}

fn main() {}
